--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="./assets/icons/favicon.png">
     <!-- Styles -->
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 
